--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -1,5 +1,37 @@
 [[plugins]]
 repo = 'vim-airline/vim-airline'
 
+
 [[plugins]]
 repo = 'ayu-theme/ayu-vim'
+
+
+[[plugins]]
+repo     = 'Shougo/deoplete.nvim'
+hook_add = '''
+  let g:deoplete#enable_at_startup = 1
+  let g:deoplete#auto_complete_delay = 1
+  let g:deoplete#auto_completion_start_length=1
+
+  inoremap <expr><TAB> pumvisible() ? "\<C-n>" : (neosnippet#expandable_or_jumpable() ? "\<Plug>(neosnippet_expand_or_jump)" : "\<TAB>") 
+  inoremap <expr><S-TAB> pumvisible() ? "\<C-p>" : "\<S-TAB>"
+  inoremap <expr><CR> neosnippet#expandable() ? "<Plug>(neosnippet_expand_or_jump)" : pumvisible() ? "<C-y>" : "<CR>"
+'''
+
+
+[[plugins]]
+repo     = 'Shougo/neosnippet.vim'
+depends  = ['neosnippet-snippets','context_filetype.vim']
+
+
+[[plugins]]
+repo = 'Shougo/neosnippet-snippets'
+
+
+[[plugins]]
+repo = 'Shougo/context_filetype.vim'
+
+
+[[plugins]]
+repo    = 'osyo-manga/vim-precious'
+depends = 'context_filetype.vim'
