--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -1,3 +1,14 @@
 [[plugins]]
 repo  = 'cespare/vim-toml'
 on_ft = ['toml']
+
+
+[[plugins]]
+repo  = 'Shougo/context_filetype.vim'
+on_ft = ['toml']
+
+
+[[plugins]]
+repo    = 'osyo-manga/vim-precious'
+depends = 'context_filetype.vim'
+on_ft   = ['toml']
