--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -31,3 +31,9 @@ on_ft = ['javascript', 'typescript', 'css', 'less', 'scss', 'json', 'graphql', '
 repo     = 'autozimu/LanguageClient-neovim'
 rev      = 'next'
 build    = 'bash install.sh'
+hook_add = '''
+let g:LanguageClient_serverCommands =
+      \ {
+      \   'ruby': ['solargraph', 'stdio'],
+      \ }
+'''
