--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -33,3 +33,9 @@ repo     = 'dense-analysis/ale'
 hook_add = '''
   let g:ale_sign_column_always = 1
 '''
+
+[[plugins]]
+repo     = 'scrooloose/nerdtree'
+hook_add = '''
+  nnoremap <silent><C-f> :NERDTreeToggle<CR>
+'''
