[add] 'vim-surround'

--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -39,3 +39,6 @@ repo     = 'scrooloose/nerdtree'
 hook_add = '''
   nnoremap <silent><C-f> :NERDTreeToggle<CR>
 '''
+
+[[plugins]]
+repo = 'tpope/vim-surround'
