[add] git plugins

--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -47,3 +47,9 @@ repo = 'tpope/vim-surround'
 
 [[plugins]]
 repo = 'tpope/vim-endwise'
+
+[[plugins]]
+repo = 'tpope/vim-fugitive'
+
+[[plugins]]
+repo = 'airblade/vim-gitgutter'
