--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -1,4 +1,31 @@
 [[plugins]]
+repo = 'Shougo/deoplete.nvim'
+hook_source = '''
+  let g:deoplete#enable_at_startup = 1
+  let g:neocomplete#enable_smart_case = 1
+  let g:neocomplete#auto_completion_start_length = 1
+'''
+on_i = 1
+
+
+[[plugins]]
+repo = 'Shougo/neosnippet'
+hook_source = '''
+  " 補完の選択/スニペット内のジャンプ
+  imap <expr><TAB> pumvisible() ? "<C-n>" : neosnippet#jumpable() ? "<Plug>(neosnippet_expand_or_jump)" : "<TAB>"
+
+  " 補完の確定/スニペットの展開
+  imap <expr><CR> neosnippet#expandable() ? "<Plug>(neosnippet_expand_or_jump)" : pumvisible() ? "<C-y>" : "<CR>"
+  if has('conceal')
+    set conceallevel=2 concealcursor=niv
+  endif
+'''
+on_i  = 1
+on_ft = ['snippet']
+depends = ['neosnippet-snippets']
+
+
+[[plugins]]
 repo  = 'cespare/vim-toml'
 on_ft = ['toml']
 
