[feat] add yaml to prettier hook

--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -54,7 +54,7 @@ autocmd FileType vue syntax sync fromstart
 [[plugins]]
 repo = 'prettier/vim-prettier'
 build = 'npm install'
-on_ft = ['javascript', 'typescript', 'css', 'less', 'scss', 'json', 'graphql', 'markdown', 'vue', 'lua', 'php', 'python', 'ruby', 'html', 'swift', 'toml', 'xml']
+on_ft = ['javascript', 'typescript', 'css', 'less', 'scss', 'json', 'graphql', 'markdown', 'vue', 'lua', 'php', 'python', 'ruby', 'html', 'swift', 'toml', 'xml', 'yaml']
 
 
 [[plugins]]
