[feat] add js ts language server

--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -63,12 +63,20 @@ on_ft = ['javascript', 'typescript', 'css', 'less', 'scss', 'json', 'graphql', '
 repo     = 'autozimu/LanguageClient-neovim'
 rev      = 'next'
 build    = 'sh install.sh'
-on_ft    = ['ruby', 'python']
+on_ft    = ['ruby', 'python', 'javascript', 'typescript']
 hook_add = '''
 let g:LanguageClient_autoStart = 1
+let g:LanguageClient_useVirtualText = 'No'
 let g:LanguageClient_serverCommands = {
       \   'ruby': ['solargraph', 'stdio'],
       \   'python': ['pyls'],
+      \   'javascript': ['javascript-typescript-stdio'],
+      \   'typescript': ['javascript-typescript-stdio'],
+      \ }
+
+let g:LanguageClient_rootMarkers = {
+      \   'javascript': ['jsconfig.json'],
+      \   'typescript': ['tsconfig.json'],
       \ }
 
 nnoremap <C-f> :call LanguageClient_textDocument_formatting()<CR>
