[feat] add cohama/lexima.vim

--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -29,6 +29,11 @@ depends = ['neosnippet-snippets']
 
 
 [[plugins]]
+repo = "cohama/lexima.vim"
+on_event = "InsertEnter"
+
+
+[[plugins]]
 repo  = 'cespare/vim-toml'
 on_ft = ['toml']
 
