--- a/nvim/dein_lazy.toml
+++ b/nvim/dein_lazy.toml
@@ -3,6 +3,8 @@ repo = 'Shougo/deoplete.nvim'
 hook_source = '''
   let g:deoplete#enable_at_startup = 1
   let g:deoplete#auto_completion_start_length = 1
+
+  imap <expr><C-h> deoplete#smart_close_popup()
 '''
 on_event = 'InsertEnter'
 
