--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -5,6 +5,9 @@ repo = 'vim-airline/vim-airline'
 repo = 'drewtempelmeyer/palenight.vim'
 
 [[plugins]]
+repo = 'miyakogi/seiya.vim'
+
+[[plugins]]
 repo = 'Shougo/neosnippet-snippets'
 
 [[plugins]]
