[feat] coc.nvim setting

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,5 +1,6 @@
 {
   "codeLens.enable": true,
   "suggest.enablePreselect": true,
-  "solargraph.checkGemVersion": false
+  "solargraph.checkGemVersion": false,
+  "solargraph.formatting": true
 }
