--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -35,7 +35,7 @@ function! s:check_back_space() abort
   return !col || getline('.')[col - 1]  =~# '\s'
 endfunction
 
-noremap <C-f> <Plug>(coc-format)
+noremap <C-f> :call CocAction('format')<CR>
 inoremap <expr><cr> pumvisible() ? "\<C-y>" : "\<C-g>u\<CR>"
 
 inoremap <silent><expr> <TAB>
