feat: change color scheme

--- a/nvim/dein.toml
+++ b/nvim/dein.toml
@@ -2,7 +2,7 @@
 repo = 'vim-airline/vim-airline'
 
 [[plugins]]
-repo = 'drewtempelmeyer/palenight.vim'
+repo = 'sainnhe/sonokai'
 
 [[plugins]]
 repo = 'miyakogi/seiya.vim'
